...
            "state": "translated",
            "value": "指派至群組"
          }
        }
      }
    },
    "Attach": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Attach"
...
            "state": "translated",
            "value": "通話中…"
          }
        }
      }
    },
    "Camera": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Camera"
...
            "state": "translated",
            "value": "無法解密來自 %@ 的訊息"
          }
        }
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "state": "translated",
            "value": "請連接相同的 WiFi 網路以傳輸檔案"
          }
        }
      }
    },
    "Connected": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connected"
...
            "state": "translated",
            "value": "已停用的功能將自動拒絕收到的請求。"
          }
        }
      }
    },
    "Disconnect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Disconnect"
...
            "state": "translated",
            "value": "結束"
          }
        }
      }
    },
    "End call": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "End call"
...
            "state": "translated",
            "value": "與現有資料合併"
          }
        }
      }
    },
    "Message": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Message"
...
            "state": "translated",
            "value": "更多選項"
          }
        }
      }
    },
    "Mute": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Mute"
...
            "state": "translated",
            "value": "附近"
          }
        }
      }
    },
    "Nearby Devices": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Nearby Devices"
...
            "state": "translated",
            "value": "下一步"
          }
        }
      }
    },
    "No active connection": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "No active connection"
...
            "state": "translated",
            "value": "通知已被拒絕"
          }
        }
      }
    },
    "OK": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "OK"
...
            "state": "translated",
            "value": "安全性降低"
          }
        }
      }
    },
    "Send": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send"
...
            "state": "translated",
            "value": "安全傳送檔案、照片、影片和訊息"
          }
        }
      }
    },
    "Send to Peer": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send to Peer"
...
            "state": "translated",
            "value": "分享一切"
          }
        }
      }
    },
    "Share Clipboard": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Share Clipboard"
...
            "state": "translated",
            "value": "排序方式"
          }
        }
      }
    },
    "Speaker": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Speaker"
...
